worked on the Individual Case studies

--- a/css/styles.css
+++ b/css/styles.css
@@ -3514,7 +3514,7 @@ progress {
     transform: none;
   }
   .navbar-expand-sm .offcanvas-top,
-.navbar-expand-sm .offcanvas-bottom {
+  .navbar-expand-sm .offcanvas-bottom {
     height: auto;
     border-top: 0;
     border-bottom: 0;
@@ -3567,7 +3567,7 @@ progress {
     transform: none;
   }
   .navbar-expand-md .offcanvas-top,
-.navbar-expand-md .offcanvas-bottom {
+  .navbar-expand-md .offcanvas-bottom {
     height: auto;
     border-top: 0;
     border-bottom: 0;
@@ -3620,7 +3620,7 @@ progress {
     transform: none;
   }
   .navbar-expand-lg .offcanvas-top,
-.navbar-expand-lg .offcanvas-bottom {
+  .navbar-expand-lg .offcanvas-bottom {
     height: auto;
     border-top: 0;
     border-bottom: 0;
@@ -3673,7 +3673,7 @@ progress {
     transform: none;
   }
   .navbar-expand-xl .offcanvas-top,
-.navbar-expand-xl .offcanvas-bottom {
+  .navbar-expand-xl .offcanvas-bottom {
     height: auto;
     border-top: 0;
     border-bottom: 0;
@@ -3726,7 +3726,7 @@ progress {
     transform: none;
   }
   .navbar-expand-xxl .offcanvas-top,
-.navbar-expand-xxl .offcanvas-bottom {
+  .navbar-expand-xxl .offcanvas-bottom {
     height: auto;
     border-top: 0;
     border-bottom: 0;
@@ -7059,6 +7059,10 @@ progress {
 
 .fw-normal {
   font-weight: 400 !important;
+}
+
+.fw-semibold {
+  font-weight: 600 !important;
 }
 
 .fw-bold {
@@ -10729,25 +10733,30 @@ body {
   letter-spacing: 0.0625em;
 }
 
-#mainNav {
+#mainNav,
+#mainNavUX {
   min-height: 3.5rem;
   background-color: #fff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
 }
-#mainNav .navbar-toggler {
+#mainNav .navbar-toggler,
+#mainNavUX .navbar-toggler {
   font-size: 80%;
   padding: 0.75rem;
   color: var(--bs-gray-900);
   border: 1px solid var(--bs-gray-900);
 }
 #mainNav .navbar-toggler:focus,
-#mainNav .nabar-toggler:active {
+#mainNav .navbar-toggler:active,
+#mainNavUX .navbar-toggler:focus,
+#mainNavUX .navbar-toggler:active {
   outline: none;
   color: var(--bs-gray-500);
   border: 1px solid var(--bs-gray-200);
   background-color: var(--bs-gray-200);
 }
-#mainNav .navbar-brand {
+#mainNav .navbar-brand,
+#mainNavUX .navbar-brand {
   color: var(--bs-gray-900);
   font-weight: 600;
   padding: 0.9rem 0;
@@ -10755,7 +10764,10 @@ body {
 
 #mainNav .navbar-brand:focus,
 #mainNav .navbar-brand:active,
-#mainNav .navbar-brand:hover {
+#mainNav .navbar-brand:hover,
+#mainNavUX .navbar-brand:focus,
+#mainNavUX .navbar-brand:active,
+#mainNavUX .navbar-brand:hover {
   color: var(--bs-gray-700);
   font-weight: 700;
 }
@@ -10766,20 +10778,31 @@ body {
   color: #7EA19F;
 }
 
-#mainNav .navbar-nav .nav-item:hover {
+#mainNavUX.navbar-shrink .navbar-brand:focus,
+#mainNavUX.navbar-shrink .navbar-brand:active,
+#mainNavUX.navbar-shrink .navbar-brand:hover {
+  color: #434343;
+}
+
+#mainNav .navbar-nav .nav-item:hover,
+#mainNavUX .navbar-nav .nav-item:hover {
   color: fade(#fff, 80%);
   outline: none;
   background-color: transparent;
 /*  font-family: Lato; */
-  font-weight: 600;
+  font-weight: 900;
 /*  letter-spacing: 0.25px; */
 }
-#mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
+#mainNav .navbar-nav .nav-item:active,
+#mainNav .navbar-nav .nav-item:focus,
+#mainNavUX .navbar-nav .nav-item:active,
+#mainNavUX .navbar-nav .nav-item:focus {
   outline: none;
   background-color: transparent;
 }
 @media (min-width: 992px) {
-  #mainNav {
+  #mainNav,
+  #mainNavUX {
     padding-top: 0;
     padding-bottom: 0;
     border-bottom: none;
@@ -10788,39 +10811,58 @@ body {
     transition: background-color 0.3s ease-in-out;
   }
   
-  #mainNav .nav-link {
+  #mainNav .nav-link,
+  #mainNavUX .nav-link {
     transition: none;
     padding: 2rem 1.5rem;
     color: rgb(17, 17, 17);
   }
-  #mainNav .nav-link:hover {
+  #mainNav .nav-link:hover,
+  #mainNavUX .nav-link:hover {
     color: rgba(17, 17, 17, 0.75);
   }
-  #mainNav .nav-link:active {
+  #mainNav .nav-link:active,
+  #mainNavUX .nav-link:active {
     color: #fff;
   }
-  #mainNav.navbar-shrink {
+  #mainNav.navbar-shrink,
+  #mainNavUX.navbar-shrink {
     background-color: rgba(255,255,255, 0.85);
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
   }
-  #mainNav.navbar-shrink .navbar-brand {
+  
+  #mainNav.navbar-shrink .navbar-brand,
+  #mainNavUX.navbar-shrink .navbar-brand {
     color: var(--bs-gray-900);
   }
-  #mainNav.navbar-shrink .nav-link {
+  #mainNav.navbar-shrink .nav-link,
+  #mainNavUX.navbar-shrink .nav-link {
     color: #000;
     padding: 1.5rem 1.5rem 1.25rem;
     border-bottom: 0.25rem solid transparent;
   }
-  #mainNav.navbar-shrink .nav-link:hover {
+  #mainNav.navbar-shrink .nav-link:hover{
     color: #7EA19F;
   }
-  #mainNav.navbar-shrink .nav-link:active {
+  #mainNav.navbar-shrink .nav-link:active{
     color: #7EA19F;
   }
-  #mainNav.navbar-shrink .nav-link.active {
+  #mainNav.navbar-shrink .nav-link.active{
     color: #7EA19F;
     outline: none;
     border-bottom: 0.5rem solid #7EA19F;
+  }
+
+  #mainNavUX.navbar-shrink .nav-link:hover {
+    color: #434343;
+  }
+  #mainNavUX.navbar-shrink .nav-link:active {
+    color: #434343;
+  }
+  #mainNavUX.navbar-shrink .nav-link.active {
+    color: #434343;
+    outline: none;
+    border-bottom: 0.5rem solid #434343;
   }
 }
 
@@ -10828,13 +10870,8 @@ body {
   position: relative;
   width: auto;
   padding: 15rem 0;
-  background: url("../assets/img/bg_main.png");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-size: cover;
 }
-.masthead h1, .masthead .h1 {
+.masthead h1 {
   font-family: 'IBM Plex Serif', sans-serif !important;
   font-weight: 700;
   font-size: 4rem;
@@ -10844,13 +10881,13 @@ body {
   -webkit-background-clip: text;
           background-clip: text;
 }
-.masthead h2, .masthead .h2 {
+.masthead h2 {
   max-width: 20rem;
   font-size: 1rem;
   font-weight: 500 !important;
 }
 @media (max-width: 576px) {
-  .masthead h1, .masthead .h1 {
+  .masthead h1 {
     font-size: 3.5rem;
     line-height: 3.5rem;
   }
@@ -10860,15 +10897,58 @@ body {
     height: 88vh;
     padding: 0;
   }
-  .masthead h1, .masthead .h1 {
+  .masthead h1 {
     font-size: 6.5rem;
     line-height: 6.5rem;
     letter-spacing: 0.8rem;
   }
-  .masthead h2, .masthead .h2 {
+  .masthead h2 {
     max-width: 30rem;
     font-size: 1.25rem;
   }
+}
+
+.masthead-sub {
+  position: relative;
+  width: auto;
+  padding: 15rem 0;
+}
+.masthead-sub h1 {
+  font-family: 'Playfair Display', serif !important;
+  font-weight: 700;
+  font-size: 4rem;
+  line-height: 3.75rem;
+  letter-spacing: 0.25px;
+  background: #141610;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+          background-clip: text;
+}
+.masthead-sub h2 {
+  font-size: 14px;
+  font-weight: 400 !important;
+  line-height: 22px !important;
+}
+@media (max-width: 576px) {
+  .masthead-sub h1 {
+    font-size: 2rem;
+    line-height: 2.25rem;
+  }
+}
+@media (min-width: 992px) {
+  .masthead-sub {
+    height: 88vh;
+    padding: 0;
+  }
+/*  .masthead-sub h1 {
+    font-size: 3.5rem;
+    line-height: 3rem;
+    letter-spacing: 0.25px;
+  }
+  .masthead-sub h2 {
+    max-width: 30rem;
+    font-size: 1.25rem;
+  } */
 }
 
 .aboutMeTag {
@@ -11110,7 +11190,8 @@ div.UXCaseLabel {
 }
 
 
-.fixed-image-section {
+.fixed-image-section,
+.fixed-image-section-UX_VTP {
   position: relative;
   z-index: 0;
   display: -webkit-box;
@@ -11135,35 +11216,39 @@ div.UXCaseLabel {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  background-color: #dfb468;
-  background-image: url("../assets/img/bg_main.png");
   background-position: 50% 72%;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  color: #fff;
-  text-align: center;
 }
+
+.fixed-image-section {
+  background-image: url("../assets/img/bg_main.png");
+}
+
+.fixed-image-section-UX_VTP {
+  background-image: url("../assets/img/UXCaseStudies/UX_VTP_main.png");
+}
+
 
 .hero-section {
-  overflow: hidden;
+/*  overflow: hidden;
   margin-top: 32px;
   margin-right: 24px;
-  margin-left: 24px;
+  margin-left: 24px; */
   padding: 200px;
-  background-color: #f1f1f1;
-  text-align: center;
+  text-align: left;
 }
 
-.hero-section.fixed-image-section {
+.hero-section.fixed-image-section,
+.hero-section.fixed-image-section-UX_VTP {
   margin: 0px;
   padding-top: 224px;
   padding-bottom: 224px;
-  background-color: #ffde3b;
-  background-image: none;
 }
 
-.hero-section.fixed-image-section.home {
+.hero-section.fixed-image-section.home,
+.hero-section.fixed-image-section-UX_VTP.home {
   position: static;
   display: -webkit-box;
   display: -webkit-flex;
@@ -11172,7 +11257,6 @@ div.UXCaseLabel {
   overflow: hidden;
   height: 90vh;
   margin: auto;
-  padding: auto;
   float: none;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -11190,15 +11274,14 @@ div.UXCaseLabel {
   -webkit-align-items: flex-start;
   -ms-flex-align: start;
   align-items: flex-start;
-  background-color: #e8cf7d;
-  background-image: url("../assets/img/bg_main.png");
   background-position: 50% 50%;
   background-size: cover;
   background-attachment: fixed;
 }
 
 @media screen and (max-width: 991px) {
-  .fixed-image-section {
+  .fixed-image-section,
+  .fixed-image-section-UX_VTP {
     padding: 241px;
   }
 
@@ -11221,7 +11304,8 @@ div.UXCaseLabel {
     padding-left: 20px;
   }
 
-  .fixed-image-section {
+  .fixed-image-section,
+  .fixed-image-section-UX_VTP {
     height: 100vh;
     padding: 111px;
   }
@@ -11240,11 +11324,12 @@ div.UXCaseLabel {
     padding-left: 0px;
   }
 
-  .fixed-image-section {
+  .fixed-image-section,
+  .fixed-image-section-UX_VTP {
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
-    display: flex;
+    display: block;
     height: 70vh;
     margin-right: 0px;
     margin-bottom: 0px;
@@ -11261,32 +11346,6 @@ div.UXCaseLabel {
     justify-content: center;
   }
 
-  .fixed-image-section.routr {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    height: 70vh;
-    margin-right: 0px;
-    margin-left: 0px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-flex-wrap: nowrap;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-box-align: center;
-    -webkit-align-items: center;
-    -ms-flex-align: center;
-    align-items: center;
-  }
-
   .hero-section {
     display: block;
     width: 90%;
@@ -11297,7 +11356,8 @@ div.UXCaseLabel {
     padding: 200px 0px 140px;
   }
 
-  .hero-section.fixed-image-section {
+  .hero-section.fixed-image-section,
+  .hero-section.fixed-image-section-UX_VTP {
     display: block;
     width: 100%;
     margin-right: auto;
@@ -11306,11 +11366,10 @@ div.UXCaseLabel {
   }
  
   .hero-section.fixed-image-section.home {
-    display: block;
     overflow: auto;
-    height: 70vh;
-    padding-top: 30%;
-    padding-bottom: 0%;
+    height: 90vh;
+    padding-top: 0%;
+    padding-bottom: 35%;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
     -webkit-flex-direction: row;
@@ -11322,7 +11381,29 @@ div.UXCaseLabel {
     justify-content: flex-start;
     background-image: url('../assets/img/bg_main.png'), -webkit-gradient(linear, left top, left bottom, from(#e8cf7d), to(#e8cf7d));
     background-image: url('../assets/img/bg_main.png'), linear-gradient(180deg, #e8cf7d, #e8cf7d);
-    background-position: 71% 50%, 0px 0px;
+    background-position: 69% 50%;
+    background-size: cover, auto;
+    background-repeat: no-repeat, repeat;
+    background-attachment: fixed, scroll;
+  }
+
+  .hero-section.fixed-image-section-UX_VTP.home {
+    overflow: auto;
+    height: 90vh;
+    padding-top: 10%;
+    padding-bottom: 0%;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    background-image: url('../assets/img/UXCaseStudies/UX_VTP_main.png'), -webkit-gradient(linear, left top, left bottom, from(#e8cf7d), to(#e8cf7d));
+    background-image: url('../assets/img/UXCaseStudies/UX_VTP_main.png'), linear-gradient(180deg, #e8cf7d, #e8cf7d);
+    background-position: 69% 50%;
     background-size: cover, auto;
     background-repeat: no-repeat, repeat;
     background-attachment: fixed, scroll;
@@ -11330,8 +11411,7 @@ div.UXCaseLabel {
 }
 
 .testEmpty {
-  height: 200vh;
-  background-color: lightgray;
+  height: 300vh;
 }
 
 /*.openingtitles {
