--- a/css/custom.css
+++ b/css/custom.css
@@ -12,122 +12,137 @@
     min-height: 3.5rem;
     background-color: #fff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
-  }
-  #mainNav .navbar-toggler {
+}
+
+#mainNav .navbar-toggler {
     font-size: 80%;
     padding: 0.75rem;
     color: var(--bs-gray-900);
     border: 1px solid var(--bs-gray-900);
-  }
-  #mainNav .navbar-toggler:focus,
-  #mainNav .navbar-toggler:active {
+}
+
+#mainNav .navbar-toggler:focus,
+#mainNav .navbar-toggler:active {
     outline: none;
     color: var(--bs-gray-500);
     border: 1px solid var(--bs-gray-200);
     background-color: var(--bs-gray-200);
-  }
-  #mainNav .navbar-brand {
+}
+
+#mainNav .navbar-brand {
     color: var(--bs-gray-900);
     font-weight: 600;
     padding: 0.9rem 0;
-  }
-  
-  #mainNav .navbar-brand:focus,
-  #mainNav .navbar-brand:active,
-  #mainNav .navbar-brand:hover {
+}
+
+#mainNav .navbar-brand:focus,
+#mainNav .navbar-brand:active,
+#mainNav .navbar-brand:hover {
     color: var(--bs-gray-700);
     font-weight: 700;
-  }
-  
-  #mainNav.navbar-shrink .navbar-brand:focus,
-  #mainNav.navbar-shrink .navbar-brand:active,
-  #mainNav.navbar-shrink .navbar-brand:hover {
+}
+
+#mainNav.navbar-shrink .navbar-brand:focus,
+#mainNav.navbar-shrink .navbar-brand:active,
+#mainNav.navbar-shrink .navbar-brand:hover {
     color: #7EA19F;
-  }
-  
-  .caseStudyVTP .navbar-shrink .navbar-brand:focus,
-  .caseStudyVTP .navbar-shrink .navbar-brand:active,
-  .caseStudyVTP .navbar-shrink .navbar-brand:hover {
+}
+
+.caseStudyVTP .navbar-shrink .navbar-brand:focus,
+.caseStudyVTP .navbar-shrink .navbar-brand:active,
+.caseStudyVTP .navbar-shrink .navbar-brand:hover {
     color: #434343 !important;
-  }
-  
-  #mainNav .navbar-nav .nav-item:hover{
+}
+
+#mainNav .navbar-nav .nav-item:hover{
     color: fade(#fff, 80%);
     outline: none;
     background-color: transparent;
-  /*  font-family: Lato; */
+    /*  font-family: Lato; */
     font-weight: 900;
-  /*  letter-spacing: 0.25px; */
-  }
-  #mainNav .navbar-nav .nav-item:active,
-  #mainNav .navbar-nav .nav-item:focus {
+    /*  letter-spacing: 0.25px; */
+}
+
+#mainNav .navbar-nav .nav-item:active,
+#mainNav .navbar-nav .nav-item:focus {
     outline: none;
     background-color: transparent;
-  }
-  @media (min-width: 992px) {
+}
+
+@media (min-width: 992px) {
     #mainNav {
-      padding-top: 0;
-      padding-bottom: 0;
-      border-bottom: none;
-      background-color: transparent;
-      box-shadow: none;
-      transition: background-color 0.3s ease-in-out;
+        padding-top: 0;
+        padding-bottom: 0;
+        border-bottom: none;
+        background-color: transparent;
+        box-shadow: none;
+        transition: background-color 0.3s ease-in-out;
     }
-    
+
     #mainNav .nav-link {
-      transition: none;
-      padding: 2rem 1.5rem;
-      color: rgb(17, 17, 17);
-    }
-    #mainNav .nav-link:hover {
-      color: rgba(17, 17, 17, 0.75);
-    }
-    #mainNav .nav-link:active {
-      color: #fff;
-    }
-    #mainNav.navbar-shrink {
-      background-color: rgba(255,255,255, 0.85);
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+        transition: none;
+        padding: 2rem 1.5rem;
+        color: rgb(17, 17, 17);
     }
     
+    #mainNav .nav-link:hover {
+        color: rgba(17, 17, 17, 0.75);
+    }
+    
+    #mainNav .nav-link:active {
+        color: #fff;
+    }
+
+    #mainNav.navbar-shrink {
+        background-color: rgba(255,255,255, 0.85);
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
+    }
+
     #mainNav.navbar-shrink .navbar-brand {
-      color: var(--bs-gray-900);
+        color: var(--bs-gray-900);
     }
+
     #mainNav.navbar-shrink .nav-link {
-      color: #000;
-      padding: 1.5rem 1.5rem 1.25rem;
-      border-bottom: 0.25rem solid transparent;
+        color: #000;
+        padding: 1.5rem 1.5rem 1.25rem;
+        border-bottom: 0.25rem solid transparent;
     }
+
     #mainNav.navbar-shrink .nav-link:hover{
-      color: #7EA19F;
+        color: #7EA19F;
     }
+
     #mainNav.navbar-shrink .nav-link:active{
-      color: #7EA19F;
+        color: #7EA19F;
     }
+
     #mainNav.navbar-shrink .nav-link.active{
-      color: #7EA19F;
-      outline: none;
-      border-bottom: 0.5rem solid #7EA19F;
+        color: #7EA19F;
+        outline: none;
+        border-bottom: 0.5rem solid #7EA19F;
     }
-  
+
     .caseStudyVTP .navbar-shrink .nav-link:hover {
-      color: #434343 !important;
+        color: #434343 !important;
     }
+
     .caseStudyVTP .navbar-shrink .nav-link:active {
-      color: #434343 !important;
+        color: #434343 !important;
     }
+
     .caseStudyVTP .navbar-shrink .nav-link.active {
-      color: #434343 !important;
-      border-bottom: 0.5rem solid #434343 !important;
+        color: #434343 !important;
+        border-bottom: 0.5rem solid #434343 !important;
     }
-  }
-  
-  .masthead {
+}
+
+.masthead {
     position: relative;
     width: auto;
     padding: 15rem 0;
-  }
-  .masthead h1 {
+}
+
+.masthead h1 {
     font-family: 'IBM Plex Serif', sans-serif !important;
     font-weight: 700;
     font-size: 4rem;
@@ -136,40 +151,46 @@
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
             background-clip: text;
-  }
-  .masthead h2 {
+}
+
+.masthead h2 {
     max-width: 20rem;
     font-size: 1rem;
     font-weight: 500 !important;
-  }
-  @media (max-width: 576px) {
+}
+
+@media (max-width: 576px) {
     .masthead h1 {
-      font-size: 3.5rem;
-      line-height: 3.5rem;
+        font-size: 3.5rem;
+        line-height: 3.5rem;
     }
-  }
-  @media (min-width: 992px) {
+}
+
+@media (min-width: 992px) {
     .masthead {
-      height: 88vh;
-      padding: 0;
+        height: 88vh;
+        padding: 0;
     }
+    
     .masthead h1 {
-      font-size: 6.5rem;
-      line-height: 6.5rem;
-      letter-spacing: 0.8rem;
+        font-size: 6.5rem;
+        line-height: 6.5rem;
+        letter-spacing: 0.8rem;
     }
+    
     .masthead h2 {
-      max-width: 30rem;
-      font-size: 1.25rem;
+        max-width: 30rem;
+        font-size: 1.25rem;
     }
-  }
-  
-  .masthead-sub {
+}
+
+.masthead-sub {
     position: relative;
     width: auto;
     padding: 15rem 0;
-  }
-  .masthead-sub h1 {
+}
+
+.masthead-sub h1 {
     font-family: 'Playfair Display', serif !important;
     font-weight: 700;
     font-size: 4rem;
@@ -179,96 +200,127 @@
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
             background-clip: text;
-  }
-  .masthead-sub h2 {
+}
+
+.masthead-sub h2 {
     font-size: 14px;
     font-weight: 400 !important;
     line-height: 22px !important;
-  }
-  @media (max-width: 576px) {
+}
+
+@media (max-width: 576px) {
     .masthead-sub h1 {
-      font-size: 2rem;
-      line-height: 2.25rem;
+        font-size: 2rem;
+        line-height: 2.25rem;
     }
-  }
-  @media (min-width: 992px) {
+}
+
+@media (min-width: 992px) {
     .masthead-sub {
-      height: 88vh;
-      padding: 0;
+        height: 88vh;
+        padding: 0;
     }
-  /*  .masthead-sub h1 {
-      font-size: 3.5rem;
-      line-height: 3rem;
-      letter-spacing: 0.25px;
-    }
-    .masthead-sub h2 {
-      max-width: 30rem;
-      font-size: 1.25rem;
-    } */
-  }
+}
   
-  .aboutMeTag {
+.topFade {
+    opacity: 0;
+    animation: topFadeOut 4s 500ms ease-out forwards;
+}
+
+@keyframes topFadeOut {
+    0% {    
+        transform: scale(1.2);
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+.fadeIn-4-2 {
+    opacity: 0;
+    animation: fadeInText 4s 2s ease-out forwards;
+}
+
+.fadeIn-3-2 {
+    opacity: 0;
+    animation: fadeInText 3s 2s ease-out forwards;
+}
+
+.fadeIn-2-2 {
+    opacity: 0;
+    animation: fadeInText 2s 2s ease-out forwards;
+}
+
+@keyframes fadeInText {
+    100%{
+        opacity: 1;
+    }
+}
+
+.aboutMeTag {
     font-family: 'IBM Plex Serif', sans-serif !important;
     font-style: normal !important;
     font-weight: 700 !important;
     font-size: 2.15rem;
     line-height: 1rem;
     letter-spacing: 0.25px;
-  }
+}
   
-  @media (max-width: 992px) {
+@media (max-width: 992px) {
     .aboutMeTag {
-      font-size: 1.75rem;
-      line-height: 2.15rem;
+        font-size: 1.75rem;
+        line-height: 2.15rem;
     }
-  }
+}
   
-  .aboutMeBody {
+.aboutMeBody {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-size: 1rem;
     line-height: 1.5rem;
-  }
-  
-  .about-section {
+}
+
+.about-section {
     padding-top: 10rem;
     background: linear-gradient(to bottom, #000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
-  }
-  .about-section p {
+}
+.about-section p {
     margin-bottom: 5rem;
-  }
-  
-  .projects-section {
+}
+
+.projects-section {
     padding: 8rem 0 2rem 0;
-  }
-  
-  .projects-section .featured-text-right {
+}
+
+.projects-section .featured-text-right {
     padding: 0 0 0 6rem;
-  }
-  .projects-section .featured-text-left {
+}
+
+.projects-section .featured-text-left {
     padding: 0 6rem 0 0;
-  }
-  
-  
-  @media (max-width: 992px) {
+}
+
+
+@media (max-width: 992px) {
     .featured-text-left {
-      padding: 0 !important;
+        padding: 0 !important;
     }
-  }
-  
-  @media (max-width: 992px) {
+}
+
+@media (max-width: 992px) {
     .featured-text-right {
-      padding: 0 !important;
-  
+        padding: 0 !important;
     }
-  }
+}
 
 .leadingLine,
-.leadingLine-white {
+.followingLine {
     width: 100%;
     letter-spacing: 1px;
 }
-.leadingLine::before,
+
 .leadingLine::before {
     content: "";
     display: inline-block;
@@ -278,6 +330,17 @@
     vertical-align: top;
     margin-top: 11px;
     margin-right: 10px;
+}
+
+.followingLine::after {
+    content: "";
+    display: inline-block;
+    width: 50px;
+    height: 1px;
+    background: #7B7B7B;
+    vertical-align: top;
+    margin-top: 11px;
+    margin-left: 10px;
 }
 
 .UXCase {
@@ -406,13 +469,13 @@ div.UXCaseLabel {
     background-size: cover;
     background-attachment: fixed;
     background-image: url("../assets/img/bg_main.png");
-  }
+}
   
-  .caseStudyVTP .hero-section {
+.caseStudyVTP .hero-section {
     background-image: url("../assets/img/UXCaseStudies/UX_VTP_main.png");
-  }
+}
 
-  .hero-section {
+.hero-section {
     padding: 200px;
     text-align: left;
     position: static;
@@ -444,68 +507,68 @@ div.UXCaseLabel {
     background-size: cover;
     background-attachment: fixed;
     background-image: url("../assets/img/bg_main.png");
-  }
+}
   
-  .caseStudyVTP .hero-section {
+.caseStudyVTP .hero-section {
     background-image: url("../assets/img/UXCaseStudies/UX_VTP_main.png");
-  }
+}
   
-  @media screen and (max-width: 991px) {
+@media screen and (max-width: 991px) {
     .hero-section {
-      display: block;
-      margin-right: 21px;
-      margin-left: 21px;
-      padding: 140px;
+          display: block;
+          margin-right: 21px;
+        margin-left: 21px;
+        padding: 140px;
     }
   
     .project-section-2 {
       height: 600px;
       margin-bottom: 100px;
     }
-  }
+}
   
-  @media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     .project-section-1 {
-      padding-right: 20px;
-      padding-left: 20px;
+          padding-right: 20px;
+        padding-left: 20px;
     }
   
     .hero-section {
-      display: block;
-      padding: 136px 16px;
-      height: 100vh;
+        display: block;
+        padding: 136px 16px;
+        height: 100vh;
     }
-  }
+}
   
-  @media screen and (max-width: 479px) {
+@media screen and (max-width: 479px) {
     .project-section-1 {
-      margin-bottom: 0px;
-      padding-right: 0px;
-      padding-left: 0px;
+        margin-bottom: 0px;
+        padding-right: 0px;
+        padding-left: 0px;
     }
   
     .hero-section {
-      display: block;
-      width: 90%;
-      height: 90vh;
-      margin: 32px auto 0px auto;
-      padding: 200px 0px 140px 0px;
-      overflow: auto;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-      -ms-flex-direction: column;
-      flex-direction: column;
-      -webkit-box-pack: center;
-      -webkit-justify-content: center;
-      -ms-flex-pack: center;
-      justify-content: center;
-      background-image: url('../assets/img/bg_main.png'), -webkit-gradient(linear, left top, left bottom, from(#e8cf7d), to(#e8cf7d));
-      background-image: url('../assets/img/bg_main.png'), linear-gradient(180deg, #e8cf7d, #e8cf7d);
-      background-position: 69% 50%;
-      background-size: cover, auto;
-      background-repeat: no-repeat, repeat;
-      background-attachment: fixed, scroll;
+        display: block;
+        width: 90%;
+        height: 90vh;
+        margin: 32px auto 0px auto;
+        padding: 200px 0px 140px 0px;
+        overflow: auto;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        background-image: url('../assets/img/bg_main.png'), -webkit-gradient(linear, left top, left bottom, from(#e8cf7d), to(#e8cf7d));
+        background-image: url('../assets/img/bg_main.png'), linear-gradient(180deg, #e8cf7d, #e8cf7d);
+        background-position: 69% 50%;
+        background-size: cover, auto;
+        background-repeat: no-repeat, repeat;
+        background-attachment: fixed, scroll;
     }
-  }
+}
   
